--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
 dbname = lavault
-host = 104.155.43.214
+host = localhost
 port = 3306
 username = root
-password = passwordsicurissima
+password = password
