--- a/src/main/resources/factories.properties
+++ b/src/main/resources/factories.properties
@@ -1,2 +1,2 @@
 notifyempty = it.unipv.ingsw.lasout.model.notify.factory.EmptyNotifyActionFactory
-friendrequest = it.unipv.ingsw.lasout.model.notify.factory.AcceptFriendRequestNotifyActionFactory
+notifyfriendrequest = it.unipv.ingsw.lasout.model.notify.factory.AcceptFriendRequestNotifyActionFactory
