--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ build/
 .DS_Store
 
 src/main/resources/app.properties
-src/main/resources/app.properties
+src/main/java/it/unipv/ingsw/lasout/mains
