--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,7 @@ build/
 .DS_Store
 
 src/main/resources/app.properties
+### Davide's main ###
 src/main/java/it/unipv/ingsw/lasout/mains
+### Dema's main ###
+src/main/java/it/unipv/ingsw/lasout/model/user/main
