--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,4 +2,7 @@ dbname = lavault
 host = localhost
 port = 3306
 username = root
-password = Florian80
+password = password
+
+facade.friend =  it.unipv.ingsw.lasout.facade.friend.ConcreteFriendFacadeV1
+facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
