Update on factory management.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -36,3 +36,16 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+src/main/resources/app.properties
+### Davide's main ###
+src/main/java/it/unipv/ingsw/lasout/mains
+### Dema's main ###
+src/main/java/it/unipv/ingsw/lasout/model/user/main
+/.gitignore
+/.idea/
+/Progetto_N25/
+/dependency-reduced-pom.xml
+/docs/
+/pom.xml
+/src/
