completamnto GroupFacade, revisione codice e commenti

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,8 +2,8 @@ dbname = lavault
 host = localhost
 port = 3306
 username = root
-password = password
+password = Florian80
 
-
+facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
 facade.friend =  it.unipv.ingsw.lasout.facade.friend.ConcreteFriendFacadeV1
 facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
