ingegnerizazione del codice e gestione eccezioni

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,3 +7,5 @@ password = Florian80
 facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
 facade.friend =  it.unipv.ingsw.lasout.facade.friend.ConcreteFriendFacadeV1
 facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
+facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
+facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
