--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,7 @@ dbname   = lavault
 host     = localhost
 port     = 3306
 username = root
-password = Lb5224_8
+password = Florian80
 
 
 facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
@@ -10,3 +10,6 @@ facade.friend =  it.unipv.ingsw.lasout.facade.friend.ConcreteFriendFacadeV1
 facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
 facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
 facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
+
+dao.spesa =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
+dao.group = it.unipv.ingsw.lasout.model.group.GroupDao
