--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -11,5 +11,5 @@ facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
 facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
 facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
 
-dao.spesa =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
-dao.group = it.unipv.ingsw.lasout.model.group.GroupDao
+dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
+dao.igroupdao = it.unipv.ingsw.lasout.model.group.GroupDao
