--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -13,3 +13,4 @@ facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
 dao.igroupdao = it.unipv.ingsw.lasout.model.group.GroupDao
+dao.inotifydao = it.unipv.ingsw.lasout.model.notify.MySQLNotifyDAO
