edit app.properties according to the new FactoryDAO implementation

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,7 @@ dbname   = lavault
 host     = localhost
 port     = 3306
 username = root
-password = Florian80
+password = database
 
 
 facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
@@ -10,6 +10,7 @@ facade.friend =  it.unipv.ingsw.lasout.facade.friend.ConcreteFriendFacadeV1
 facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
 facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
 facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
+facade.cashbook = it.unipv.ingsw.lasout.facade.cashbook.CashbookFacade
 
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
