--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,7 @@ dbname   = lavault
 host     = localhost
 port     = 3306
 username = root
-password = ildema3939
+password = Florian80
 
 
 facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
