--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -11,12 +11,14 @@ facade.notify =  it.unipv.ingsw.lasout.facade.notify.ConcreteNotifyFacadeV1
 facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
 facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
 facade.cashbook = it.unipv.ingsw.lasout.facade.cashbook.CashbookFacade
+facade.transaction = it.unipv.ingsw.lasout.facade.cashbook.TransactionFacade
 
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
 dao.igroupdao = it.unipv.ingsw.lasout.model.group.GroupDao
 dao.inotifydao = it.unipv.ingsw.lasout.model.notify.MySQLNotifyDAO
 dao.icashbookdao = it.unipv.ingsw.lasout.model.cashbook.CashbookDAO
+dao.itransactiondao = it.unipv.ingsw.lasout.model.cashbook.TransactionDAO
 dao.iuserdao = it.unipv.ingsw.lasout.model.user.UserDAO
 dao.ivaultdao= it.unipv.ingsw.lasout.model.vault.VaultDAO
 dao.virtualvaultdao = it.unipv.ingsw.lasout.model.virtualVault.VirtualVaultDAO
