Troubleshooting and starting facade

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -38,14 +38,18 @@ build/
 .DS_Store
 
 src/main/resources/app.properties
-### Davide's main ###
 src/main/java/it/unipv/ingsw/lasout/mains
+
+.gitignore
+src/main/java/it/unipv/ingsw/lasout/SuperMain.java
+
+/src/main/java/it/unipv/ingsw/lasout/testdada/
 ### Dema's main ###
-src/main/java/it/unipv/ingsw/lasout/model/user/main
-/.gitignore
+src/main/java/it/unipv/ingsw/lasout/main
 /.idea/
-/Progetto_N25/
 /dependency-reduced-pom.xml
 /docs/
+/lib/
 /pom.xml
 /src/
+/vault/
