--- a/src/main/resources/methodpaymentfactories.properties
+++ b/src/main/resources/methodpaymentfactories.properties
@@ -1,3 +1,3 @@
-paypal = it.unipv.ingsw.lasout.model.vault.PayPal
-currentaccount = it.unipv.ingsw.lasout.model.vault.CurrentAccount
-creditcard = it.unipv.ingsw.lasout.model.vault.CreditCard
+PayPal = it.unipv.ingsw.lasout.model.vault.paymentmethod.PayPal
+CurrentAccount = it.unipv.ingsw.lasout.model.vault.paymentmethod.CurrentAccount
+CreditCard = it.unipv.ingsw.lasout.model.vault.paymentmethod.CreditCard
