Metodo di login e registrazione funzionanti col loro relativo controller collegato alle ConcreteFacade necessarie

--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,5 @@ src/main/java/it/unipv/ingsw/lasout/SuperMain.java
 
 /src/main/java/it/unipv/ingsw/lasout/testdada/
 ### Dema's main ###
+src/main/java/it/unipv/ingsw/lasout/view/login_signIn
 src/main/java/it/unipv/ingsw/lasout/main
