Added GUI with vault view

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,7 @@ dbname   = lavault
 host     = localhost
 port     = 3306
 username = root
-password = Florian80
+password = Lb5224_8
 
 
 facade.group = it.unipv.ingsw.lasout.facade.group.ConcreteGroupFacade
@@ -12,6 +12,7 @@ facade.user =  it.unipv.ingsw.lasout.facade.user.ConcreteUserFacade
 facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
 facade.cashbook = it.unipv.ingsw.lasout.facade.cashbook.CashbookFacade
 facade.transaction = it.unipv.ingsw.lasout.facade.cashbook.TransactionFacade
+facade.vault = it.unipv.ingsw.lasout.facade.vault.ConcreteVaultFacade
 
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
