Tolto JavaFX, sistemato NotifyAction

--- a/src/main/resources/notifyperistence.properties
+++ b/src/main/resources/notifyperistence.properties
@@ -1,2 +1,2 @@
-friendrequest = it.unipv.ingsw.lasout.model.notify.action.persistance.MySQLFriendRequestNotifyActionPersistence
-empty = it.unipv.ingsw.lasout.model.notify.action.persistance.MySQLEmptyNotifyActionPersistence
+notifyfriendrequest = it.unipv.ingsw.lasout.model.notify.action.friend.persistance.MySQLFriendRequestNotifyActionPersistence
+notifyempty = it.unipv.ingsw.lasout.model.notify.action.persistance.MySQLEmptyNotifyActionPersistence
