--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,7 +2,7 @@ dbname   = lavault
 host     = localhost
 port     = 3306
 username = root
-password = Lb5224_8
+password = Florian80
 
 
 
@@ -14,6 +14,7 @@ facade.session =  it.unipv.ingsw.lasout.facade.user.ConcreteSessionFacade
 facade.cashbook = it.unipv.ingsw.lasout.facade.cashbook.CashbookFacade
 facade.transaction = it.unipv.ingsw.lasout.facade.transaction.TransactionFacade
 facade.vault = it.unipv.ingsw.lasout.facade.vault.ConcreteVaultFacade
+facade.virtualvault = it.unipv.ingsw.lasout.facade.virtualVault.ConcreteVirtualVaultFacade
 
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
@@ -23,4 +24,4 @@ dao.icashbookdao = it.unipv.ingsw.lasout.model.cashbook.RdbCashbookDao
 dao.itransactiondao = it.unipv.ingsw.lasout.model.transaction.RdbTransactionDao
 dao.iuserdao = it.unipv.ingsw.lasout.model.user.UserDAO
 dao.ivaultdao= it.unipv.ingsw.lasout.model.vault.VaultDAO
-dao.virtualvaultdao = it.unipv.ingsw.lasout.model.virtualVault.VirtualVaultDAO
+dao.ivirtualvaultdao = it.unipv.ingsw.lasout.model.virtualVault.VirtualVaultDAO
