Fixed stuff for NotifyDAO and packages

--- a/src/main/resources/notifyperistence.properties
+++ b/src/main/resources/notifyperistence.properties
@@ -1,2 +1,2 @@
-notifyfriendrequest = it.unipv.ingsw.lasout.model.notify.action.friend.persistance.MySQLFriendRequestNotifyActionPersistence
-notifyempty = it.unipv.ingsw.lasout.model.notify.action.persistance.MySQLEmptyNotifyActionPersistence
+notifyfriendrequest = it.unipv.ingsw.lasout.model.notify.action.mysql.friend.persistance.MySQLFriendRequestNotifyActionPersistence
+notifyempty = it.unipv.ingsw.lasout.model.notify.action.mysql.MySQLEmptyNotifyActionPersistence
