--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -37,19 +37,19 @@ build/
 ### Mac OS ###
 .DS_Store
 
-src/main/resources/app.properties
 src/main/java/it/unipv/ingsw/lasout/mains
 
-.gitignore
 src/main/java/it/unipv/ingsw/lasout/SuperMain.java
 
 /src/main/java/it/unipv/ingsw/lasout/testdada/
 ### Dema's main ###
+src/main/java/it/unipv/ingsw/lasout/view/login_signIn
 src/main/java/it/unipv/ingsw/lasout/main
+/.gitignore
 /.idea/
+/README.md
 /dependency-reduced-pom.xml
 /docs/
 /lib/
 /pom.xml
 /src/
-/vault/
