--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -19,7 +19,7 @@ facade.virtualvault = it.unipv.ingsw.lasout.facade.virtualVault.ConcreteVirtualV
 
 dao.ispesadao =  it.unipv.ingsw.lasout.model.group.spesa.SpesaDao
 dao.igroupdao = it.unipv.ingsw.lasout.model.group.GroupDao
-dao.inotifydao = it.unipv.ingsw.lasout.model.notify.ConcreteNotifyDAO
+dao.inotifydao = it.unipv.ingsw.lasout.model.notify.dao.ConcreteNotifyDAO
 dao.icashbookdao = it.unipv.ingsw.lasout.model.cashbook.MySQLCashbookDao
 dao.itransactiondao = it.unipv.ingsw.lasout.model.transaction.MySQLTransactionDao
 dao.iuserdao = it.unipv.ingsw.lasout.model.user.UserDAO
@@ -27,4 +27,4 @@ dao.ivaultdao= it.unipv.ingsw.lasout.model.vault.VaultDAO
 dao.ivirtualvaultdao = it.unipv.ingsw.lasout.model.virtualVault.VirtualVaultDAO
 
 
-dao.inotifydao.strategy  =  it.unipv.ingsw.lasout.model.notify.logic.MySQLNotifyDAOStrategy
+dao.inotifydao.strategy  =  it.unipv.ingsw.lasout.model.notify.dao.logic.mysql.MySQLNotifyDAOStrategy
