--- a/src/main/resources/notifyperistence.properties
+++ b/src/main/resources/notifyperistence.properties
@@ -1,2 +1,2 @@
 notifyfriendrequest = it.unipv.ingsw.lasout.model.notify.action.mysql.friend.persistance.MySQLFriendRequestNotifyActionPersistence
-notifyempty = it.unipv.ingsw.lasout.model.notify.action.mysql.MySQLEmptyNotifyActionPersistence
+notifyempty = it.unipv.ingsw.lasout.model.notify.action.persistence.mysql.MySQLEmptyNotifyActionPersistence
